--- a/GraphQL/threads-app-backend/package.json
+++ b/GraphQL/threads-app-backend/package.json
@@ -9,12 +9,16 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/node": "^24.0.13",
+    "prisma": "^6.11.1",
+    "ts-node": "^10.9.2",
     "tsc-watch": "^7.1.1",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
     "@as-integrations/express5": "^1.1.1",
+    "@prisma/client": "^6.11.1",
     "express": "^5.1.0",
     "graphql": "^16.11.0"
   }
